Worked with varexj output